--- a/Interactive_3D_Earth/css/sidebar.css
+++ b/Interactive_3D_Earth/css/sidebar.css
@@ -70,7 +70,7 @@ h2 {
   position: relative;
 }
 
-#countryName{
+#bodypartName{
   font-size: 62px;
   margin-bottom: -25px;
 }
